--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,3 +57,9 @@ stages:
         PathtoPublish: '$(Build.ArtifactStagingDirectory)'
         ArtifactName: 'drop'
         publishLocation: 'Container'
+    - task: KubernetesManifest@1
+      inputs:
+        action: 'deploy'
+        connectionType: 'kubernetesServiceConnection'
+        kubernetesServiceConnection: 'myaksconn'
+        manifests: 'kubernetes/productcatalogue-service.yaml'
